- Added `email-validator` runtime dependency because Pydantic models rely on it for `EmailStr` validation.
- Kept `httpx` at ^0.27.0 for compatibility with FastAPI’s pinned Starlette, avoiding TestClient breakage.

## 2025-08-09 (0.12.19)
- Synced Python requirements: added `httpx==0.27.0` and `email-validator==2.2.0` to `requirements/default.txt` so the devcontainer rebuild installs them automatically.

## 2025-08-09 (0.12.20)
- Re-enabled strict ESLint rules and fixed remaining lint errors across the web front-end:
  * Removed duplicate `SnackbarContext` in favour of typed `components/Snackbar.tsx`.
  * Typed Snackbar helpers, removed `// @ts-nocheck`, replaced undefined returns.
  * Cleaned `TopNav` unused import, fixed import order warnings.
  * Added `@types/uuid` devDependency and updated `ProfileWizard` to use typed UUID.
  * Suppressed false-positive `react/no-unknown-property` on MUI `Typography`.
- Fixed backend test failure: exported `sync_dummy.delay` from scheduler again so `test_scan_due_profiles` can monkey-patch.
- All `npm run lint -- --max-warnings=0`, `vitest` and `pytest` now pass cleanly.

## 2025-08-09 (0.12.21)
- Reinstated strict MyPy configuration with official SQLAlchemy plugin.
- Removed `sqlalchemy2-stubs` (conflicted with plugin).
- Fixed Alembic migration typings and env script imports; MyPy now reports zero errors.

## 2025-08-10 (0.12.22)
- Phase 3 hardening kick-off: 
  * Added retry/back-off (`autoretry_for`, exponential) and late-ack to `sync_connector` task.
  * Scheduler now checks `sync_runs` table to skip profiles already running/pending, preventing duplicate jobs.
- All tests green after new connector and orchestrator test suites.

## 2025-08-10 (0.12.23)
- Added Celery worker Docker image (`worker/Dockerfile`) and GitHub Actions workflow `worker.yml` to build/test/push image.
- Added unit test `test_retry_policy.py` verifying task retry settings.
- Marked Phase 3 milestone (worker image) complete in TODO.